--- a/exercises/solutions/ex9_tf.ipynb
+++ b/exercises/solutions/ex9_tf.ipynb
@@ -39,6 +39,8 @@
     "import ccs_eeg_utils\n",
     "import numpy as np\n",
     "import scipy\n",
+    "import sys\n",
+    "sys.path.insert(0,\"..\")\n",
     "from matplotlib import pyplot as plt\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -507,13 +509,6 @@
    "source": [
     "power_total.plot(baseline=bsl,mode=mode,picks='Cz',vmin=-1,vmax=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
